--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Learning Languages
 description: Welcome! Salvete! Interested in learning languages?
+minimal_mistakes_skin: mint
