--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,15 @@ theme: jekyll-theme-minimal
 title: Learning Languages
 description: Welcome! Salvete! Interested in learning languages?
 minimal_mistakes_skin: mint
+avatar: 
+main:
+  - title: "Beginners' Latin Video Lessons"
+    url: /docs/quick-start-guide/
+  - title: "Blog Lessons"
+    url: /year-archive/
+  - title: "Latin Vocabulary"
+    url: /categories/
+  - title: "Linguistics Olympiad Walk-throughs"
+    url: /tags/
+  - title: "External Link"
+    url: https://google.com
